# swaycap

./: .gitignore  README.md  __main__.py  capture.py  gui.py  pyproject.toml
swaycap/: __init__.py  cli.py  config.py
swaycap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
